# furios-initial-setup

./: README.md  meson.build  meson_options.txt
data/: io.furios.InitialSetup.desktop.in.in  io.furios.InitialSetup.gschema.xml  io.furios.InitialSetup.metainfo.xml.in.in  meson.build
debian/: control  copyright  furios-initial-setup.install
po/: es.po  meson.build
src/: cc-common-language.c  cc-language-chooser.c  cc-language-chooser.h  cc-network-list.c  cc-network-list.h  cc-online-account-provider-row.c  cc-online-account-row.c  cc-util.c  furios-initial-setup.gresource.xml  main.c  meson.build  phosh-tour.gresource.xml  pt-application.c  pt-hw-page.c  pt-hw-page.h  pt-online-accounts.c  pt-online-accounts.h  pt-page.c  pt-page.h  pt-security-settings.c  pt-security-settings.h  pt-update-progress.c  pt-update-progress.h  pt-window.c  run-passwd.c  run-passwd.h
src/ui/: cc-online-account-row.ui  language-chooser.ui  network-list.ui  pt-online-accounts.ui  pt-page.ui  pt-security-settings.ui  pt-update-progress.ui  pt-window.ui  style.css
systemd/: 60-initial-setup.conf  furios-initial-setup
